# trident-syscall-stubs-v1

./: Cargo.toml  README.md
src/: builtin_function.rs  invoke_context.rs  lib.rs  syscall_stubs.rs
